# ndi-bridge-linux

./: .gitignore  CLAUDE.md  CMakeLists.txt  PROMPT-LTC-TEST-PATTERN.md  PROMPT-MESURE-LATENCE.md  README.md  RELAY_TASK.md  deploy-vm.sh  ndi-bridge-linux-port-prompt.md  ndi-bridge-mac-metal-monitoring-prompt.md  ndi-test-pattern.desktop
.cache/clangd/index/: HostMode.cpp.E323035CB2FF27B9.idx  HostMode.h.46B510233CB80C5F.idx  Logger.cpp.19E862FCE26BCC12.idx  Logger.h.4CE46FE4959D7742.idx  NDIReceiver.cpp.8B1A0C29A7406212.idx  NDIReceiver.h.A6D9E879FC3764C1.idx  NetworkReceiver.cpp.D7543B294544425F.idx  NetworkReceiver.h.9C3E14ED618D2113.idx  NetworkSender.cpp.D6970C7154B79220.idx  NetworkSender.h.04E3899BECF87988.idx  Protocol.cpp.BEDD7ABF02210AD0.idx  Protocol.h.3FFDFFEC78076897.idx  VideoDecoder.cpp.ADA86C9634B34DA3.idx  VideoDecoder.h.5F604EC44E1F636A.idx  VideoEncoder.cpp.4388966692099BB2.idx  VideoEncoder.h.4BEC35EEBC0F29B7.idx  codec_test.cpp.8DA06E4B469FEF37.idx  encoder_test.cpp.811337920BAA31C1.idx  main.cpp.87EF4A624DED88D2.idx  network_test.cpp.F15FE45DB1F820C1.idx
Docs/: RELAY_MODE.md
cmake/: FindNDI.cmake
scripts/: AppIcon.icns  build-bridge.ps1  build.sh  make_app_icon.py  setup-windows.ps1  start-bridge-mac.sh
src/: main.cpp
src/common/: Logger.cpp  Logger.h  Platform.h  Protocol.cpp  Protocol.h  Version.h
src/host/: HostMode.cpp  HostMode.h
src/join/: JoinMode.cpp  JoinMode.h
src/ndi/: NDIReceiver.cpp  NDIReceiver.h  NDISender.cpp  NDISender.h
src/network/: NetworkReceiver.cpp  NetworkReceiver.h  NetworkSender.cpp  NetworkSender.h
src/tests/: codec_test.cpp  encoder_test.cpp  network_test.cpp
src/tools/: ndi_test_pattern.cpp  ndi_test_recv.cpp  ndi_viewer.cpp  tc_font.h  tc_webcontrol.h
src/video/: VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
src/web/: BridgeManager.cpp  BridgeManager.h  BridgeWebControl.h
